apps/homebox/homebox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: homebox
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
      - name: homebox
        image: ghcr.io/sysadminsmedia/homebox:v0.25.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7745
          protocol: TCP
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 512Mi
        securityContext:
          runAsUser: 65532
          runAsGroup: 65532
        livenessProbe:
          httpGet:
            path: /api/v1/status
            port: 7745
          initialDelaySeconds: 15
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: 7745
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /data
          name: homebox-data
      restartPolicy: Always
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: homebox-data
        persistentVolumeClaim:
          claimName: homebox-data-pvc
