apps/homebox/homebox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
spec:
  type: ClusterIP
  selector:
    app: homebox
  ports:
  - port: 7745
    targetPort: 7745
    protocol: TCP
