apps/homebox/homebox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox-ingress
  namespace: homebox
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  rules:
  - host: home.coultonf.com
    http:
      paths:
      - backend:
          service:
            name: homebox
            port:
              number: 7745
        path: /
        pathType: Prefix
